<resources>
    <string name="app_name">TOP Youth</string>
    <string name="type_in_your_password">Password</string>
    <string name="chose_pass">Chose a password</string>
    <string name="type_in_your_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="new_member_register_here">Create a new account and join us</string>
    <string name="memebers_login_here">Members login</string>
    <string name="forgotten_password_click_here">Forgotten Password Click HERE</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="sign_out">Sign out</string>
    <string name="topUser">Top User</string>
    <string name="have_no_account">Have no account? Register here</string>
    <string name="not_yet_approved_by_the_admin">Not yet approved by the admin</string>
    <string name="you_posted">Posts: </string>
    <string name="you_liked_posts">Likes: </string>
    <string name="status">Status: </string>
    <string name="dots">..........</string>
    <string name="like_number">Like number</string>
    <string name="comments_number">Comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="your_toughts">Your thoughts</string>

    <string name="post_details">Post details</string>
    <string name="your_thoughts">Your thoughts?</string>
    <string name="save">Save</string>
    <string name="post_title">Post title</string>
    <string name="ipsum_lorem">Ipsum Lorem</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="change_user_name">Change user name</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="reset_password">Reset password</string>
    <string name="delete_account">Delete account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="unlike">Unlike</string>
    <string name="journal">Journal</string>
    <string name="cancel">Cancel</string>
    <string name="sign_me_out">Sign out</string>
    <string name="log_out">Log out?</string>
    <string name="delete_accnt">Delete account</string>
    <string name="delet_accnt_warning">Are you sure you want to proceed?</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="loading_please_wait">Loading, please wait…</string>
    <string name="click_image_to_add_media">Click image to add media</string>
    <string name="check_internet">Please verify your internet connection</string>
    <string name="apply_changes">Apply changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="you_are_offline">No internet connection detected!</string>
    <string name="gallery">Gallery</string>
    <string name="cam">Camera</string>
    <string name="nothing_to_display">Nothing to display</string>
</resources>
