<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    tools:showDividers="beginning|middle"
    tools:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

    <group
        android:checkableBehavior="none"
        android:enabled="true"
        android:menuCategory="system">
        <item
            android:id="@+id/chengeUserNameItem"
            android:checkable="false"
            android:icon="@null"
            android:title="@string/change_user_name"
            />
        <item
            android:id="@+id/changeProfPictureItem"
            android:checkable="false"
            android:icon="@null"
            android:title="@string/change_profile_picture" />
        <item
            android:id="@+id/resetPassItem"
            android:checkable="false"
            android:icon="@null"
            android:title="@string/reset_password" />

        <item
            android:id="@+id/signOutItem"
            android:checkable="false"
            android:icon="@null"
            android:title="@string/sign_out" />


        <item
            android:id="@+id/delete_accountItem"
            android:icon="@null"
            android:title="@string/delete_account" />
    </group>
</menu>