<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fade_grey">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/top_youth_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="?actionBarSize"
                android:src="@mipmap/top_youth_logo_icone" />

            <TextView
                android:id="@+id/registerTitl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_youth_logo"
                android:backgroundTint="@color/white"
                android:fontFamily="monospace"
                android:text="@string/memebers_login_here"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:hint="@string/type_in_your_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="5dp"
                android:shadowColor="@color/grey"
                android:shadowRadius="1"
                android:textAlignment="center">

            </EditText>

            <EditText
                android:id="@+id/pass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_field"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/type_in_your_password"
                android:inputType="textPassword"
                android:maxEms="30"
                android:maxLines="1"
                android:minEms="8"
                android:padding="5dp"
                android:textAlignment="center">

            </EditText>

            <Button
                android:id="@+id/button_login"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@id/pass_field"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/button_design_selector_round_blue"
                android:elevation="5dp"
                android:fontFamily="@font/arimo"
                android:textColor="@color/white"
                android:onClick="onClick"
                android:text="@string/login"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewforgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="?actionBarSize"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:onClick="onClick"
                android:text="@string/forgotten_password_click_here"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView_register_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewforgot_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="?actionBarSize"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:onClick="onClick"
                android:text="@string/have_no_account"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </RelativeLayout>

    </FrameLayout>
</LinearLayout>

