<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/fade_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:elevation="20dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:progressTint="@color/blue_darkish"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/registerTitl"
            android:text="@string/new_member_register_here"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_below="@id/top_youth_logo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/top_youth_logo"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/top_youth_logo_icone"
            android:layout_width="120dp"
            android:layout_marginTop="?actionBarSize"
            android:layout_height="120dp"/>


        <EditText
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/edit_text_background"
            android:shadowColor="@color/grey"
            android:shadowRadius="1"
            android:elevation="4dp"
            android:hint="@string/type_in_your_email"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/pass_field"
            android:layout_marginTop="5dp"
            android:hint="@string/type_in_your_password"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:maxEms="30"
            android:elevation="4dp"
            android:minEms="8"
            android:maxLines="1"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            android:layout_below="@id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/registerCPass_field"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_your_password"
            android:textAlignment="center"
            android:layout_below="@id/pass_field"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:maxLines="1"
            android:elevation="4dp"
            android:maxEms="30"
            android:minEms="8"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/button_register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_below="@id/registerCPass_field"
            android:layout_centerHorizontal="true"
            android:elevation="5dp"
            android:fontFamily="@font/arimo"
            android:background="@drawable/button_design_selector_round_blue"
            android:layout_margin="10dp"
            android:layout_width="150dp"
            android:textColor="@color/white"
            android:layout_height="30dp"
            android:onClick="onClick"

            />

    </RelativeLayout>

<!--    </FrameLayout>-->
</LinearLayout>