<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:theme="@style/Widget.AppCompat.Light.ActionBar.TabBar"
    xmlns:context="http://schemas.android.com/tools"
    context:context=".user_profile.UserProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialogTitleTextView"
            android:text="@string/log_out"
            android:textColor="@color/red_light"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/ruda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/confirmButton"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/sign_me_out"
            android:fontFamily="@font/arimo"
            android:textAllCaps="false"
            android:padding="3dp"
            android:onClick="onClick"
            android:layout_below="@id/dialogTitleTextView"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:background="@drawable/button_design_selector_white"
            android:layout_alignStart="@id/dialogTitleTextView"
            android:layout_width="100dp"
            android:layout_height="30dp">

        </Button>

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"
            android:background="@drawable/button_design_selector_white"
            android:fontFamily="@font/arimo"
            android:onClick="onClick"
            android:padding="3dp"
            android:layout_alignEnd="@id/dialogTitleTextView"
            android:elevation="5dp"
            android:layout_below="@id/dialogTitleTextView"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:layout_width="100dp"
            android:layout_height="30dp">

        </Button>
    </RelativeLayout>

</LinearLayout>