<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/background_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerTitl"
            android:text="@string/reset_your_password"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_below="@id/top_youth_logo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/top_youth_logo"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/top_youth_logo_icone"
            android:layout_width="120dp"
            android:layout_marginTop="?actionBarSize"
            android:layout_height="120dp"/>


        <EditText
            android:layout_marginStart="?actionBarSize"
            android:layout_marginEnd="?actionBarSize"
            android:layout_centerInParent="true"
            android:background="@drawable/edit_text_background"
            android:shadowColor="@color/grey"
            android:shadowRadius="1"
            android:elevation="4dp"
            android:hint="@string/type_in_your_email"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>



        <Button
            android:id="@+id/button_register"
            android:text="@string/send"
            android:textAllCaps="false"
            android:layout_below="@id/email_field"
            android:layout_centerHorizontal="true"
            android:elevation="5dp"
            android:fontFamily="@font/arimo"
            android:background="@drawable/button_design_selector_round_blue"
            android:layout_margin="?actionBarSize"
            android:layout_width="@android:dimen/thumbnail_width"
            android:textColor="@color/white"
            android:layout_height="@android:dimen/app_icon_size"
            android:onClick="onClick"

            />

    </RelativeLayout>

    <!--    </FrameLayout>-->
</LinearLayout>